feat: 更新应用名称为工作助手，添加项目描述和作者信息，调整多个组件布局和样式，删除不必要的样式文件

--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!doctype html>
-<html lang="en">
+<html lang="zh-CN">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + Vue + TS</title>
+    <meta name="description" content="一个方便公司提交与修改OA日报周报的管理工具" />
+    <meta name="author" content="Msg-Lbo" />
+    <title>工作助手 - WorkHelper</title>
   </head>
   <body>
     <div id="app"></div>
